fix text alignment

--- a/src/blocks/modal/modal.scss
+++ b/src/blocks/modal/modal.scss
@@ -42,6 +42,10 @@
     }
   }
 
+  &__text {
+    text-align: center;
+  }
+
   &__buttons {
     display: grid;
     grid-auto-flow: column;
